@@ -98,7 +98,7 @@ default: // use frames directory
 	<td><img src="<?php echo "$base/$imageTR" ?>" border="0" width="<?php echo $widthTR ?>" height="<?php echo $heightTR ?>" alt=""></td>
   </tr>
   <tr>
-	<td height="100%"><table border="0" cellspacing="0" cellpadding="0" style="height:<?php echo $hLL ?>px">
+	<td height="100%"><table border="0" cellspacing="0" cellpadding="0">
 	    <?php if ($heightLLT > 0) { ?>
 	    <!-- LLT -->
 	    <tr>
@@ -107,7 +107,7 @@ default: // use frames directory
 	    <?php } ?>
 	    <tr>
 		<!-- LL -->
-		<td width="<?php echo $widthLL ?>" style="background-image:url(<?php echo "$base/$imageLL" ?>)"><img src="<?php echo $pixelImage ?>" border="0" width="1" height="<?php echo $hLL ?>" alt=""></td>
+		<td width="<?php echo $widthLL ?>" style="background-image:url(<?php echo "$base/$imageLL" ?>)"><img src="<?php echo $pixelImage ?>" border="0" width="1" height="<?php echo $hLL ?>" alt="" name="frameLL"></td>
 	    </tr>
 	    <?php if ($heightLLB > 0) { ?>
 	    <!-- LLB -->
@@ -121,7 +121,7 @@ default: // use frames directory
 		<td align="center"><?php echo $href_tag ?></td>
 	     </tr>
 	    </table></td>
-	<td height="100%"><table border="0" cellspacing="0" cellpadding="0" style="height:<?php echo $hRR ?>px">
+	<td height="100%"><table border="0" cellspacing="0" cellpadding="0">
 	    <?php if ($heightRRT > 0) { ?>
 	    <!-- RRT -->
 	    <tr>
@@ -130,7 +130,7 @@ default: // use frames directory
 	    <?php } ?>
 	    <tr>
 		<!-- RR -->
-		<td width="<?php echo $widthRR ?>" style="background-image:url(<?php echo "$base/$imageRR" ?>)"><img src="<?php echo $pixelImage ?>" border="0" width="1" height="<?php echo $hRR ?>" alt=""></td>
+		<td width="<?php echo $widthRR ?>" style="background-image:url(<?php echo "$base/$imageRR" ?>)"><img src="<?php echo $pixelImage ?>" border="0" width="1" height="<?php echo $hRR ?>" alt="" name="frameRR"></td>
 	    </tr>
 	    <?php if ($heightRRB > 0) { ?>
 	    <tr>
