@@ -1,3 +1,8 @@
+2004-10-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b249
+
+	* Fix: fitToWindow didn't work with image frames, since the frames themselves
+	  were never resized to match the new image height.
+
 2004-10-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b248
 
 	* Change: Fix margin on Search form for IE.
